--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -28,6 +28,11 @@ body.layout-home {
             padding: 0;
         }
     }
+
+    .phone-github-btn {
+        text-align: center;
+        padding-top: 12px;
+    }
 }
 
 .home-hero {
